# phoenix-sdr-net

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  add-discovery-submodule.bat  build_splitter.bat  commit.bat  deploy-release.ps1  do_commit.bat  phoenix-build.json  test-ci-build.cmd  test-ci-build.ps1  test-ci-build.sh
.github/: copilot-instructions.md
.github/workflows/: build.yml
cmake/: version.h.in
docs/: IQ_STREAMING.md
include/: version.h
package/: README.md
src/: sdr_controller.c  sdr_server.c  signal_relay.c  signal_splitter.c
